--- a/inicio/templates/inicio.html
+++ b/inicio/templates/inicio.html
@@ -5,5 +5,7 @@
     <h1>{{ title }}</h1>
     <p>Bienvenidos a nuestra página web</p>
     <p>Explora todas las secciones disponibles usando el menú de navegación superior.</p>
+    <!-- Texto de pie con información del creador -->
+    <p class="footer-text">Sitio Web creado por: Antonia Verdugo, Ian Oyarzo y Matias Cisternas.</p>
 </div>
 {% endblock %}
