--- a/inicio/templates/login_options.html
+++ b/inicio/templates/login_options.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="content-box">
-    <h1>¡Bienvenido/a a Mi Proyecto!</h1>
+    <h1>¡Bienvenido/a a LIA!</h1>
     
-    <p>Para acceder a la plataforma, por favor selecciona una opción.</p>
+        <p>Para acceder a la plataforma, por favor selecciona una opción.</p>
     
     <div style="margin-top: 30px; text-align: center;">
         <a href="{% url 'login' %}" class="nav-item" style="background: #2563eb; color: white; border-color: #2563eb; display: inline-block; margin: 10px;">
