--- a/inicio/templates/base.html
+++ b/inicio/templates/base.html
@@ -8,6 +8,8 @@
     <title>Mi Proyecto</title>
     <!-- Cargamos el archivo CSS con los estilos principales -->
     <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 </head>
 <body>
     
@@ -43,6 +45,7 @@
     <div class="container">
         <!-- Aquí se insertará el contenido específico de cada página -->
         {% block content %}
+        
         {% endblock %}
     </div>
 </main>
