--- a/inicio/templates/login.html
+++ b/inicio/templates/login.html
@@ -48,7 +48,7 @@
         
         <p style="text-align: center; margin-top: 20px; color: #475569; font-size: 0.95rem;">
             ¿No tienes cuenta? 
-            <a href="{% url 'registro' %}" style="color: #10b981; text-decoration: none; font-weight: bold;">
+            <a href="{% url 'inicio:registro' %}" style="color: #10b981; text-decoration: none; font-weight: bold;">
                 Regístrate aquí. 📝
             </a>
         </p>
