--- a/inicio/templates/login_options.html
+++ b/inicio/templates/login_options.html
@@ -17,7 +17,7 @@
     
     <div style="margin-top: 30px; text-align: center; display: flex; justify-content: center; gap: 30px;">
         
-        <a href="{% url 'login' %}" class="nav-item" style="
+        <a href="{% url 'inicio:login' %}" class="nav-item" style="
             background: linear-gradient(135deg, #2563eb, #1e40af); /* Pequeño gradiente */
             color: white; 
             border: none;
@@ -29,7 +29,7 @@
             🔑 Ya tengo cuenta (Iniciar Sesión)
         </a>
         
-        <a href="{% url 'registro' %}" class="nav-item" style="
+        <a href="{% url 'inicio:registro' %}" class="nav-item" style="
             background: linear-gradient(135deg, #10b981, #059669); /* Pequeño gradiente */
             color: white; 
             border: none;
