--- a/inicio/templates/register.html
+++ b/inicio/templates/register.html
@@ -14,8 +14,7 @@
         <div style="display: grid; 
                     grid-template-columns: 1fr 1fr; 
                     gap: 30px 20px; /* Más espacio entre filas y columnas */
-                    padding: 20px 0;">
-            
+                    padding: 20px 0;">      
             {% for field in formulario %}
                 
                 {% if field.name == 'password1' or field.name == 'password2' %}
@@ -34,7 +33,7 @@
                         {% elif field.name == 'first_name' %}
                             ✨ Nombres
                         {% elif field.name == 'last_name' %}
-                            surname Apellidos
+                            ✨ Apellidos
                         {% elif field.name == 'rol_universitario' %}
                             🆔 Rol Universitario
                         {% elif field.name == 'rol' %}
@@ -53,9 +52,7 @@
                         
                         {% if field.field.required %} <span style="color: #ef4444;">*</span>{% endif %}
                     </label>
-                    
-                    {{ field.as_widget }}
-                    
+                    {{ field.as_widget}}
                     {% if field.help_text %}
                         <p style="color: #64748b; font-size: 0.85rem; margin-top: 5px; text-align: left; line-height: 1.3;">
                             {% if field.name == 'username' %}
@@ -97,7 +94,7 @@
         </button>
         
         <p class="footer-text" style="text-align: center; margin-top: 20px; border-top: none;">
-            ¿Ya tienes cuenta? <a href="{% url 'login' %}" style="color: #2563eb; text-decoration: none; font-weight: bold;">Inicia Sesión aquí.</a>
+            ¿Ya tienes cuenta? <a href="{% url 'inicio:login' %}" style="color: #2563eb; text-decoration: none; font-weight: bold;">Inicia Sesión aquí.</a>
         </p>
     </form>
 </div>
