--- a/inicio/templates/login.html
+++ b/inicio/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="content-box" style="max-width: 450px; margin: 50px auto; padding: 40px;">
     
-    <h1 style="color: #2563eb;">🔑 Inicia Sesión</h1>
+    <h1 class="uni-title" style="font-size: 2rem; margin-bottom: 30px; text-align: center;">🔑 Inicia Sesión</h1>
     <p style="color: #475569; margin-bottom: 25px;">
         Ingresa tus credenciales para acceder a la plataforma web.
     </p>
