--- a/inicio/templates/mapa.html
+++ b/inicio/templates/mapa.html
@@ -9,7 +9,7 @@
     <img src="{% static 'map.png' %}" alt="Mapa Interactivo" width="80">
     
     <!-- Título principal de la página -->
-    <h1>Mapa Interactivo</h1>
+    <h1 class="uni-title" style="font-size: 2rem; margin-bottom: 30px; text-align: center;">Mapa Interactivo</h1>
     
     <!-- Descripción del mapa -->
     <p>En este mapa interactivo encontrarás diversas ubicaciones de interés.</p>
@@ -18,7 +18,7 @@
 </div>
 <style>
     .content-box {
-        background: transparent !important;
+        
         overflow: visible !important;
         position: relative !important;
         isolation: isolate !important;
@@ -27,7 +27,7 @@
     #map {
         height: 600px;
         width: 870px;
-        background-color: #fff !important; /* evita mezcla con fondo del contenedor */
+        background-color: #beecf7e6 !important; /* evita mezcla con fondo del contenedor */
         z-index: 1;
     }
 
