--- a/inicio/templates/perfil.html
+++ b/inicio/templates/perfil.html
@@ -8,7 +8,7 @@
     background: #f4f6f9; /* Fondo ligeramente gris para la tarjeta de perfil */
 ">
     
-    <h1 style="color: #2563eb;">👤 {{ p }}</h1>
+    <h1 class="uni-title" style="font-size: 2rem; margin-bottom: 30px; text-align: center;">👤 {{ p }}</h1>
     
   
 
