--- a/inicio/templates/tutores.html
+++ b/inicio/templates/tutores.html
@@ -7,7 +7,7 @@
     padding: 40px;
 ">
     
-    <h1 style="color: #10b981;">🧑‍🏫 {{ t }}</h1>
+    <h1 class="uni-title" style="font-size: 2rem; margin-bottom: 30px; text-align: center;"> {{ t }}</h1>
     
     <div style="margin-top: 30px; 
                 padding: 30px; 
